force-app/main/default/objects/Order_Analytics__c/Order_Analytics__c.object-meta.xml
<CustomObject>
    <description>Denormalized per-order analytics rows (demographics + order amount) ingested into Data Cloud for Calculated Insights.</description>
    <label>Order Analytics</label><pluralLabel>Order Analytics</pluralLabel>
    <nameField><label>Order Analytics Name</label><type>AutoNumber</type><displayFormat>OA-{00000}</displayFormat></nameField>
    <sharingModel>ReadWrite</sharingModel>
<enableSearch>true</enableSearch>
</CustomObject>