force-app/main/default/objects/Order_Analytics__c/fields/Account__c.field-meta.xml
<CustomField><fullName>Account__c</fullName><label>Account</label><type>Lookup</type><referenceTo>Account</referenceTo><relationshipName>Order_Analytics</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>