force-app/main/default/objects/Order_Analytics__c/fields/Age_Group__c.field-meta.xml
<CustomField><fullName>Age_Group__c</fullName><label>Age Group</label><type>Text</type><length>10</length></CustomField>