force-app/main/default/objects/Order_Analytics__c/fields/Email_Consent__c.field-meta.xml
<CustomField><fullName>Email_Consent__c</fullName><label>Email Consent</label><type>Checkbox</type><defaultValue>false</defaultValue></CustomField>