force-app/main/default/objects/Order_Analytics__c/fields/Gender__c.field-meta.xml
<CustomField><fullName>Gender__c</fullName><label>Gender</label><type>Text</type><length>20</length></CustomField>