force-app/main/default/objects/Order_Analytics__c/fields/Order__c.field-meta.xml
<CustomField><fullName>Order__c</fullName><label>Order</label><type>Lookup</type><referenceTo>Order</referenceTo><relationshipName>Order_Analytics</relationshipName><deleteConstraint>SetNull</deleteConstraint></CustomField>