force-app/main/default/objects/Order_Analytics__c/fields/Order_Amount__c.field-meta.xml
<CustomField><fullName>Order_Amount__c</fullName><label>Order Amount</label><type>Currency</type><precision>10</precision><scale>2</scale></CustomField>