force-app/main/default/objects/Order_Analytics__c/fields/Product_Category__c.field-meta.xml
<CustomField><fullName>Product_Category__c</fullName><label>Top Category</label><type>Text</type><length>40</length></CustomField>