force-app/main/default/objects/Order_Analytics__c/fields/State__c.field-meta.xml
<CustomField><fullName>State__c</fullName><label>State</label><type>Text</type><length>10</length></CustomField>